2008-07-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/ldml/Analyzer.java:
	(fetchResource(AliasElement)):
	Add element name to error message.
	* src/gnu/localegen/PropertiesGenerator.java,
	(convertToJavaString(String)): Output Unicode characters
	using \u syntax.
	(ManualListContent.generateContent(PrintWriter)): Likewise.
	(OrderedListContent.generateContent(PrintWriter)): Likewise.
	(TimeZoneContent.generateContent(PrintWriter)): Likewise.
	
2008-07-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Turn off bytecode compilation during native build.
	* src/gnu/ldml/Parser.java:
	Record data in metazone element.
	* src/gnu/localegen/PropertiesGenerator.java:
	Incorporate metazone data as well in timezone translations.

2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/22851:
	* src/gnu/localegen/JavaGenerator.java:
	Fix ordering of zone names.
	* src/gnu/localegen/Main.java:
	Update copyright.
	* src/gnu/localegen/PropertiesGenerator.java,
	Fix ordering of zone names and include
	separators to mark missing fields.
	
2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* m4/ac_prog_javac.m4:
	Only display GCJ warning on versions prior to 4.3.
	
2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac:
	Only check for JAVAC if a native build
	is not used.
	* m4/ac_prog_javac.m4:
	Updated with additional compilers from Classpath.
	
2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* INSTALL: Remove ASM requirement.
	* Makefile.am: Only include GNU bytecode JAR when
	used.
	* autogen.sh: Updated to match GNU Classpath.

2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Remove previous rules for
	scripts and install in share/cp-tools instead
	of share/java.
	* bin/currencygen,
	* bin/localegen,
	* bin/javah,
	* bin/javap: Removed.
	* bin/currencygen.in,
	* bin/gjavah.in,
	* bin/gjavap.in,
	* bin/localegen.in: New script templates.