@@ -30,6 +30,8 @@ import java.io.FileWriter;
 import java.io.BufferedWriter;
 import java.io.FileInputStream;
 import java.util.HashMap;
+import java.util.Map;
+import java.util.Iterator;
 
 public class Main
 {
@@ -50,10 +52,15 @@ public class Main
     FileWriter currencyFile = new FileWriter("iso4217.properties");
     BufferedWriter bWriter = new BufferedWriter(currencyFile);
     PrintWriter output = new PrintWriter(bWriter, true);
-    handler = new SupplementalHandler(output);
+    BufferedWriter weekFile = new BufferedWriter(new FileWriter("weeks.properties"));
+    PrintWriter wOutput = new PrintWriter(weekFile, true);
+    handler = new SupplementalHandler(output, wOutput);
     reader.setContentHandler(handler);
     reader.parse(source);
     bWriter.flush();
+    weekFile.flush();
+    bWriter.close();
+    weekFile.close();
   }
 
   static void printUsage()
@@ -92,19 +99,30 @@ class SupplementalHandler extends DefaultHandler
   static final int STATE_REGION = 3;
   static final int STATE_SEENCURRENCY = 7;
   static final int STATE_SUPPLEMENTAL = 1;
+  static final int STATE_WEEKDATA = 10;
   static final int STATE_ZERO = 0;
-  HashMap currencyInfo = new HashMap();
+  Map currencyInfo = new HashMap();
   String currentCurrency;
   String currentRegion;
   int ignoreLevel;
   int oldState;
   PrintWriter output;
+  PrintWriter wOutput;
+  Map weekInfo = new HashMap();
 
   int state;
 
-  public SupplementalHandler(PrintWriter output)
+  /**
+   *
+   * Constructs a new handler for supplemental data.
+   *
+   * @param output the output file for the currency data.
+   * @param wOutput the output file for the week data.
+   */
+  public SupplementalHandler(PrintWriter output, PrintWriter wOutput)
   {
     this.output = output;
+    this.wOutput = wOutput;
   }
 
   void checkMultiState(int[] currentStates, int newState) throws SAXException
@@ -164,6 +182,16 @@ class SupplementalHandler extends DefaultHandler
       checkState(STATE_FRACTIONS, STATE_CURRENCYDATA);
     else if (localName.equals("info"))
       checkState(STATE_INFO, STATE_FRACTIONS);
+    else if (localName.equals("weekData"))
+      {
+	checkState(STATE_WEEKDATA, STATE_SUPPLEMENTAL);
+	Iterator iter = weekInfo.entrySet().iterator();
+	while (iter.hasNext())
+	  {
+	    Map.Entry entry = (Map.Entry) iter.next();
+	    wOutput.println(entry.getKey() + "=" + entry.getValue());
+	  }
+      }
   }
 
   public void startDocument()
@@ -171,6 +199,9 @@ class SupplementalHandler extends DefaultHandler
     output
       .println("# This document is automatically generated by gnu.currencygen");
     output.println();
+    wOutput
+      .println("# This document is automatically generated by gnu.currencygen");
+    wOutput.println();
     state = STATE_ZERO;
     ignoreLevel = 0;
   }
@@ -198,6 +229,24 @@ class SupplementalHandler extends DefaultHandler
       checkState(STATE_CURRENCYDATA, STATE_FRACTIONS);
     else if (localName.equals("info"))
       checkState(STATE_FRACTIONS, STATE_INFO);
+    else if (localName.equals("weekData"))
+      checkState(STATE_SUPPLEMENTAL, STATE_WEEKDATA);
+    else if (localName.equals("minDays") && state == STATE_WEEKDATA)
+      {
+	String status = atts.getValue("draft");
+	if (status == null || status.equals("false") || status.equals("approved"))
+	  {
+	    int minDays = Integer.parseInt(atts.getValue("count"));
+	    String[] territories = atts.getValue("territories").split(" ");
+	    for (int a = 0; a < territories.length; ++a)
+	      {
+		if (territories[a].equals("001"))
+		  wOutput.println("DEFAULT=" + minDays);
+		else
+		  weekInfo.put(territories[a], minDays);
+	      }
+	  }
+      }
     else
       {
         ignoreLevel++;
